fixed horizontal scrolling

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,4 @@
 rest-item{
-    min-height: 100px;
-    min-width: 100px;
+    height: 100px;
+    width: 100px;
 }
